{
    "name": "Controls",
    "maps": [
        {
            "name": "Player",
            "id": "50e2b924-5971-421a-a448-c19eb16b0e50",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "c668063b-f3d6-4e9e-bfe6-595035d4716c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "5248e5ec-13e0-41b4-8afc-096cd17e0a96",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AbilityOne",
                    "type": "Button",
                    "id": "c0c7f95a-79dd-453d-9ba1-ab225a1b209c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AbilityTwo",
                    "type": "Button",
                    "id": "92c4040b-afac-47f2-bcbb-f72470ccef04",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AbilityThree",
                    "type": "Button",
                    "id": "b4aef9e9-a654-4ee6-b6b5-aa0e4e885511",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AbilityFour",
                    "type": "Button",
                    "id": "5390bd1e-cd42-4afb-b96f-fcfd36d49f3a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Stats",
                    "type": "Button",
                    "id": "9d5934fe-7160-4a96-a8fa-57db067dcb24",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "72204dbc-45b9-46d9-a644-fef68615ec94",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "d90531a6-0fe6-4bc3-8b99-8e487b658e60",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8a654b6d-3a55-4122-b97c-cc1f764110c7",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d14299de-aac8-472a-a518-7e50338654ae",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "49ef8ea2-31ca-4d4d-9b03-2d15c418b472",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AbilityOne",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "306be40a-5b23-409f-aa95-0c3f3bd79737",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AbilityTwo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fde44e18-afc7-4bda-bfb6-6f8b79bc86d7",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AbilityThree",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "65dc5996-0c61-408e-91ec-d5da4d46fc98",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AbilityFour",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "39225757-b223-4c41-a61d-d9ded040b247",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Stats",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "924059ab-556a-4a4a-802c-1b07f668f1af",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5f5cbaa6-93a1-4229-b70e-e9f4f9ec6283",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}